--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
 poetry = "^1.8.2"
+pylance = "^0.10.9"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.1.1"
 
 [build-system]
 requires = ["poetry-core"]
