--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "pyproject"
     ],
     "python.analysis.extraPaths": [
-        "${workspaceFolder}/.venv"
+        "${workspaceFolder}/.venv",
+        "${workspaceFolder}/src"
     ],
     "python.testing.unittestArgs": [
         "-v",
@@ -13,5 +14,8 @@
         "test_*.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
+    "terminal.integrated.env.osx": {
+        "PYTHONPATH": "${workspaceFolder}/src"
+    },
 }
