--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,13 @@ pylance = "^0.10.9"
 flake8 = "^7.0.0"
 pytest = "^8.1.1"
 
-
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "src"
+]
 
 [build-system]
 requires = ["poetry-core"]
