--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,22 +1,17 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python package
+name: Build Python package
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build:
+
+  test-and-build:
 
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.9", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -39,3 +34,23 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Build package
+      run: |
+        poetry build
+    - name: Upload package
+      if: ${{ needs.test-and-build.result == 'success' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: package
+        path: dist/
+
+  deploy:
+      needs: test-and-build
+  
+      runs-on: ubuntu-latest
+  
+      steps:
+      - name: Upload package
+        uses: actions/download-artifact@v4
+        with:
+          name: package
