--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,7 +41,7 @@ jobs:
       if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: package
+        name: package-${{ matrix.python-version }}
         path: dist/
 
   deploy:
