--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,4 +18,6 @@
     "terminal.integrated.env.osx": {
         "PYTHONPATH": "${workspaceFolder}/src"
     },
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
 }
