--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
 
-  test-and-build:
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -37,20 +37,28 @@ jobs:
     - name: Build package
       run: |
         poetry build
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.12
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install poetry
+        poetry build
     - name: Upload package
       if: success()
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v2
       with:
-        name: package-${{ matrix.python-version }}
-        path: dist/
+        name: dist
+        path: dist/*
 
-  deploy:
-      needs: test-and-build
-  
-      runs-on: ubuntu-latest
-  
-      steps:
-      - name: Upload package
-        uses: actions/download-artifact@v4
-        with:
-          name: package-3.12
+
