--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -53,14 +53,21 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -m pip install poetry
-        POETRY_VERSION=$(poetry --version)
-        POETRY_VERSION=${POETRY_VERSION}dev${GITHUB_SHA}
+    - name: Set version number
+      run: |
+        PKG_VERSION=$(poetry --version)
+        SHA=$(echo $GITHUB_SHA | cut -c1-7)
+        POETRY_VERSION=${PKG_VERSION}dev${SHA}
+        echo "Setting version to ${POETRY_VERSION}"
+        echo "POETRY_VERSION=${POETRY_VERSION}" >> $GITHUB_ENV
+    - name: Build package
+      run: |
         poetry build
     - name: Upload package
       if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: dist-${{ github.sha }}
+        name: dist-${{ env.POETRY_VERSION }}
         path: dist/*
 
 
