--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -55,11 +55,14 @@ jobs:
         python -m pip install poetry
     - name: Set version number
       run: |
-        PKG_VERSION=$(poetry version)
+        PKG_VERSION=$(poetry version --short)
         SHA=$(echo $GITHUB_SHA | cut -c1-7)
         POETRY_VERSION=${PKG_VERSION}dev${SHA}
         echo "Setting version to ${POETRY_VERSION}"
         echo "POETRY_VERSION=${POETRY_VERSION}" >> $GITHUB_ENV
+        PKG_NAME=$(poetry version | tr ' ' '-')dev${SHA}
+        echo "Setting package name to ${PKG_NAME}"
+        echo "PKG_NAME=${PKG_NAME}" >> $GITHUB_ENV
     - name: Build package
       run: |
         poetry build
@@ -67,7 +70,7 @@ jobs:
       if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: dist-${{ env.POETRY_VERSION }}
+        name: ${{ env.PKG_NAME }}
         path: dist/*
 
 
