Try again to set the version at build time

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -67,6 +67,7 @@ jobs:
       if: success()
       run: |
         echo "POETRY_VERSION=${POETRY_VERSION}"
+        poetry version $POETRY_VERSION
         poetry build
     - name: Upload package
       if: success()
