--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -60,7 +60,7 @@ jobs:
         POETRY_VERSION=${PKG_VERSION}dev${SHA}
         echo "Setting version to ${POETRY_VERSION}"
         echo "POETRY_VERSION=${POETRY_VERSION}" >> $GITHUB_ENV
-        PKG_NAME=$(poetry version | tr ' ' '-')dev${SHA}
+        PKG_NAME=$(poetry version | tr ' ' '-').dev${SHA}
         echo "Setting package name to ${PKG_NAME}"
         echo "PKG_NAME=${PKG_NAME}" >> $GITHUB_ENV
     - name: Build package
