--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -75,5 +75,9 @@ jobs:
       with:
         name: ${{ env.PKG_NAME }}
         path: dist/*
+    - name: Publish package to TestPyPI
+      uses: pypa/gh-action-pypi-publish@release/v1.8
+      with:
+        repository-url: https://test.pypi.org/legacy/
 
 
