--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,6 +41,9 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
     - uses: actions/checkout@v4
