--- a/.github/workflows/python-build-test-workflow.yaml
+++ b/.github/workflows/python-build-test-workflow.yaml
@@ -12,6 +12,7 @@ jobs:
         python-version: ["3.9", "3.12", "3.x"]
 
     steps:
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
