--- a/.github/workflows/python-build-test-workflow.yaml
+++ b/.github/workflows/python-build-test-workflow.yaml
@@ -40,6 +40,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
