--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.9", "3.12", "3.x"]
+        python-version: ["3.12", "3.x"]
 
     steps:
       - uses: actions/checkout@v4
